--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+.FAB{
+  position: fixed;
+  right: 2em;
+  bottom: 2em;
+}
+
 .Header-background{
   padding: 50px;
   padding-top: 100px;
@@ -33,7 +39,8 @@ padding: 0px !important;
   padding-left: .5rem;
 }
 .Header-Benefit-image img{
-  max-width: 100%;
+  max-width: 80%;
+  width: 25%;
 }
 
 .Header-Benefit-content{
@@ -61,6 +68,36 @@ padding: 0px !important;
   margin: 0 auto;
 }
 
+.textfield{
+  display: block !important;
+  width: 50% !important;
+}
+
+.Login-actions{
+  margin-top: 1em;
+  text-align: center;
+}
+
+.Login-Background{
+  height: 90vh;
+  background-size: cover;
+  background-position: center;
+
+}
+
+.PlaceH-avatar{
+  background-color: #f5f5f5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 25%;
+  overflow: hidden;
+}
+
+.PlaceH-avatar img{
+  max-width: 80%;
+}
+
 .fade-scale-enter{
   opacity: 0;
   transform: scale(0);
@@ -81,4 +118,25 @@ padding: 0px !important;
   opacity: 0;
   transform: scale(0);
   transition: all 300ms cubic-bezier(0.25, 0.1, 0.25, 1);
+}
+
+
+.left-out-enter{
+  opacity: 0;
+  transform: translateX(100%);
+}
+
+.left-out-enter-active {
+  opacity: 1;
+  transform: translateX(0);
+}
+
+.left-out-exit{
+  opacity: 1;
+  transform: translateX(100%);
+
+}
+.left-out-exit-active{
+  opacity: 0;
+  transform: translateX(0);
 }
